<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application name -->
    <string name="app_name">WeatherMo</string>
    <!-- End of section -->

    <!-- Application version name -->
    <string name="app_version_name">1.3.7</string>
    <!-- End of section -->

    <!-- Strings used in the "About" section of preferences -->
    <!-- The strings should be HTML-escaped -->
    <string name="about_info">
        &lt;h1&gt;WeatherMo &#169;&lt;/h1&gt;
        &lt;p&gt;1.3.7&lt;/p&gt;
    </string>
    <string name="about_regards">
        &lt;p&gt;Data from openweathermap.org&lt;/p&gt;
        &lt;p&gt;Powered by &#169; Cordova, &#169; OpenStreetMap&lt;/p&gt;
    </string>
    <!-- End of section -->

    <!-- Strings used in various ui components -->
    <string name="ui_null">" "</string>
    <string name="ui_placeholder">null</string>
    <string name="ui_current">Current</string>
    <string name="ui_map">Map</string>
    <string name="ui_city_name_input_hint">Enter Here:</string>
    <!-- End of section -->
    
    <!-- Strings used in option menu -->
    <string name="menu_title_main_preference">Preference</string>
    <!-- End of section -->
    
    <!-- Strings used in toolbar -->
    <string name="activity_city">City</string>
    <string name="activity_map">Map</string>
    <string name="activity_preference">Preference</string>
    <!-- End of section -->
    
    <!-- Strings used in button -->
    <string name="button_add_more">Add More</string>
    <string name="button_insert">Insert</string>
    <string name="button_delete">Delete</string>
    <!-- End of section -->
    
    <!-- Strings used in snackbar -->
    <string name="snackbar_succeed">Insert succeed!!!</string>
    <string name="snackbar_failed">Insert failed!!!</string>
    <!-- End of section -->

    <!-- Strings used in preferences -->
    <string name="pref_refresh_auto_toggle_summary">Enable automatic refresh</string>
    <string name="pref_refresh_auto_toggle_title">Automatic</string>
    <string name="pref_refresh_auto_frequency_title">Frequency</string>
    <!-- End of section -->
    
    <!-- Keys for shared preferences. DO NOT MODIFY -->
    <string name="PREF_REFRESH_AUTO_TOGGLE">PREF_REFRESH_AUTO_TOGGLE</string>
    <string name="PREF_REFRESH_AUTO_FREQUENCY">PREF_REFRESH_AUTO_FREQUENCY</string>
    <!-- End of section -->
    
    <!-- Keys in headers section -->
    <string name="PREF_HEADER_ABOUT">PREF_HEADER_ABOUT</string>
    <string name="PREF_HEADER_REFRESH">PREF_HEADER_REFRESH</string>
    <!-- End of sub section -->
    
    <!-- Strings used in gui of headers section -->
    <string name="pref_header_about_title">About</string>
    <string name="pref_header_refresh_title">Refresh</string>
    <!-- End of sub section -->
    
    <!-- Default values in /array. CHECK before modify -->
    <string name="frequency_values_default">3</string>
    <!-- End of section -->
    
    <!-- Used in map layers option -->
    <string name="ui_layer_precipitation">Precipitation</string>
    <string name="ui_layer_rain">Rain</string>
    <string name="ui_layer_snow">Snow</string>
    <string name="ui_layer_clouds">Clouds</string>
    <string name="ui_layer_pressure">Pressure</string>
    <string name="ui_layer_temperature">Temperature</string>
    <string name="ui_layer_windspeed">Windspeed</string>
    <!-- End of section -->
    
    <!-- Description of ultra violet radiation index -->
    <string name="uv_low">Low</string>
    <string name="uv_moderate">Moderate</string>
    <string name="uv_high">High</string>
    <string name="uv_very_high">Very high</string>
    <string name="uv_extreme">Extreme</string>
    <!-- End of section -->
    
    <!-- Description of weather category -->
    <string name="cat_thunderstorm">Thunderstorm</string>
    <string name="cat_drizzle">Drizzle</string>
    <string name="cat_rain">Rain</string>
    <string name="cat_snow">Snow</string>
    <string name="cat_mist">Mist</string>
    <string name="cat_smoke">Smoke</string>
    <string name="cat_haze">Haze</string>
    <string name="cat_sand">Sand</string>
    <string name="cat_fog">Fog</string>
    <string name="cat_dust">Dust</string>
    <string name="cat_volcanic_ash">Volcanic Ash</string>
    <string name="cat_squalls">Squalls</string>
    <string name="cat_tornado">Tornado</string>
    <string name="cat_clear">Clear</string>
    <string name="cat_clouds">Clouds</string>
    <!-- End of section -->
    
    <!-- Description of weather -->
    <string name="desc_thunderstorm">Thunderstorm</string>
    <string name="desc_thunderstorm_light">Light thunderstorm</string>
    <string name="desc_thunderstorm_heavy">Heavy thunderstorm</string>
    <string name="desc_thunderstorm_ragged">Ragged thunderstorm</string>
    <string name="desc_thunderstorm_rain">Thunderstorm with rain</string>
    <string name="desc_thunderstorm_rain_light">Thunderstorm with light rain</string>
    <string name="desc_thunderstorm_rain_heavy">Thunderstorm with heavy rain</string>
    <string name="desc_thunderstorm_drizzle">Thunderstorm with drizzle</string>
    <string name="desc_thunderstorm_drizzle_light">Thunderstorm with light drizzle</string>
    <string name="desc_thunderstorm_drizzle_heavy">Thunderstorm with heavy drizzle</string>
    
    <string name="desc_drizzle_light">Light drizzle</string>
    <string name="desc_drizzle">Drizzle</string>
    <string name="desc_drizzle_heavy">Heavy drizzle</string>
    <string name="desc_drizzle_rain_light">Light drizzle rain</string>
    <string name="desc_drizzle_rain">Drizzle rain</string>
    <string name="desc_drizzle_rain_heavy">Heavy drizzle rain</string>
    <string name="desc_drizzle_shower_rain">Shower rain drizzle</string>
    <string name="desc_drizzle_shower">Shower drizzle</string>
    <string name="desc_drizzle_shower_heavy">Heavy shower rain drizzle</string>
    
    <string name="desc_snow_light">Light snow</string>
    <string name="desc_snow">Snow</string>
    <string name="desc_snow_heavy">Heavy snow</string>
    <string name="desc_sleet">Sleet</string>
    <string name="desc_sleet_shower">Shower sleet</string>
    <string name="desc_snow_rain_light">Light rain and snow</string>
    <string name="desc_snow_rain">Rain and snow</string>
    <string name="desc_snow_shower_light">Light shower snow</string>
    <string name="desc_snow_shower">Shower snow</string>
    <string name="desc_snow_shower_heavy">Heavy shower snow</string>
    
    <string name="desc_mist">Mist</string>
    <string name="desc_smoke">Smoke</string>
    <string name="desc_haze">Haze</string>
    <string name="desc_sand_dust">Sand with dust whirls</string>
    <string name="desc_fog">Fog</string>
    <string name="desc_sand">Sand</string>
    <string name="desc_dust">Dust</string>
    <string name="desc_volcanic_ash">Volcanic ash</string>
    <string name="desc_squalls">Squalls</string>
    
    <string name="desc_rain_light">Light rain</string>
    <string name="desc_rain_moderate">Moderate rain</string>
    <string name="desc_rain_heavy">Heavy rain</string>
    <string name="desc_rain_very_heavy">Very heavy rain</string>
    <string name="desc_rain_extreme">Extreme rain</string>
    <string name="desc_rain_freezing">Freezing rain</string>
    <string name="desc_rain_shower_light">Light shower rain</string>
    <string name="desc_rain_shower">Shower rain</string>
    <string name="desc_rain_shower_heavy">Heavy shower rain</string>
    <string name="desc_rain_shower_ragged">Radded shower rain</string>
    
    <string name="desc_sky_clear">Clear sky</string>
    <string name="desc_clouds_few">Few clouds</string>
    <string name="desc_clouds_scattered">Scattered clouds</string>
    <string name="desc_clouds_broken">Broken clouds</string>
    <string name="desc_clouds_overcast">Overcast clouds</string>
    
    <string name="desc_tornado">Tornado</string>
    <string name="desc_storm">Storm</string>
    <string name="desc_storm_violent">Violent storm</string>
    <string name="desc_storm_tropical">Tropical storm</string>
    <string name="desc_hurricane">Hurricane</string>
    <string name="desc_cold">Cold</string>
    <string name="desc_hot">Hot</string>
    <string name="desc_windy">Windy</string>
    <string name="desc_hail">Hail</string>
    
    <string name="desc_calm">Calm</string>
    <string name="desc_breeze_light">Light breeze</string>
    <string name="desc_breeze_gentle">Gentle breeze</string>
    <string name="desc_breeze_moderate">Moderate breeze</string>
    <string name="desc_breeze_fresh">Fresh breeze</string>
    <string name="desc_breeze_strong">Strong breeze</string>
    <string name="desc_gale_near">Near gale</string>
    <string name="desc_gale">Gale</string>
    <string name="desc_gale_severe">Severe gale</string>
    <!-- End of section -->
    
    <!-- Abbrieviation in day of week -->
    <string name="abbrev_sunday">Sun</string>
    <string name="abbrev_monday">Mon</string>
    <string name="abbrev_tuesday">Tues</string>
    <string name="abbrev_wednesday">Wed</string>
    <string name="abbrev_thursday">Thur</string>
    <string name="abbrev_friday">Fri</string>
    <string name="abbrev_saturday">Sat</string>
    <!-- End of section -->

</resources>