<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_layer_precipitation"
        app:showAsAction="never"
        android:title="@string/ui_layer_precipitation">
    </item>
    <item
        android:id="@+id/menu_layer_rain"
        app:showAsAction="never"
        android:title="@string/ui_layer_rain">
    </item>
    <item
        android:id="@+id/menu_layer_snow"
        app:showAsAction="never"
        android:title="@string/ui_layer_snow">
    </item>
    <item
        android:id="@+id/menu_layer_clouds"
        app:showAsAction="never"
        android:title="@string/ui_layer_clouds">
    </item>
    <item
        android:id="@+id/menu_layer_pressure"
        app:showAsAction="never"
        android:title="@string/ui_layer_pressure">
    </item>
    <item
        android:id="@+id/menu_layer_temperature"
        app:showAsAction="never"
        android:title="@string/ui_layer_temperature">
    </item>
    <item
        android:id="@+id/menu_layer_windspeed"
        app:showAsAction="never"
        android:title="@string/ui_layer_windspeed">
    </item>

</menu>