<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <org.qmsos.weathermo.preference.SwitchPreferenceCustom
        android:defaultValue="FALSE"
        android:key="@string/PREF_REFRESH_AUTO_TOGGLE"
        android:summary="@string/pref_refresh_auto_toggle_summary"
        android:title="@string/pref_refresh_auto_toggle_title" />

    <org.qmsos.weathermo.preference.ListPreferenceCustom
        android:defaultValue="@string/frequency_values_default"
        android:dependency="@string/PREF_REFRESH_AUTO_TOGGLE"
        android:dialogTitle="@string/pref_refresh_auto_frequency_title"
        android:entries="@array/frequency_entries"
        android:entryValues="@array/frequency_values"
        android:key="@string/PREF_REFRESH_AUTO_FREQUENCY"
        android:summary="%s"
        android:title="@string/pref_refresh_auto_frequency_title" />

</android.support.v7.preference.PreferenceScreen>